<resources>
    <string name="app_name">Reporte calle</string>
    <string name="txt_mail">Correo electrónico</string>
    <string name="txt_pass">Contraseña</string>
    <string name="txt_iniciar_sesion">Iniciar sesión</string>
    <string name="txt_iniciar_sesion_facebook">Iniciar sesión con Facebook</string>
    <string name="txt_registro">Crear una cuenta nueva</string>
    <string name="txt_o">O</string>
    <string name="txt_failed">Acceso denegado</string>

    <!-- FACEBOOK INICIO SESION-->
    <string name="facebook_app_id">310557852743470</string>
    <string name="fb_login_protocol_scheme">fb310557852743470</string>

    <string name="txt_llene_campos_corretos">Llene los campos adecuadamente</string>
    <string name="txt_por_favor_ingrese">Por favor ingrese</string>
    <string name="txt_apellido">Apellido</string>
    <string name="txt_nombre">Nombre de pila</string>
    <string name="txt_titulo_registro">Registro</string>
    <string name="txt_crear_cuenta">Crear cuenta</string>
    <string name="txt_cancelar">Cancelar</string>
    <string name="txt_profile">Perfil</string>
    <string name="txt_logout">Cerrar sesión</string>
    <string name="txt_pass_confirmation">Confirmación de contraseña</string>
    <string name="txt_save">Guardar</string>
    <string name="txt_msg_confirmacion">Las contraseñas no coinciden</string>
    <string name="txt_update">actualizada</string>
    <string name="txt_ubicacion">Mi ubicación</string>
    <string name="txt_mapa">Mapa</string>
    <string name="txt_reporte">Reporte</string>
    <string name="txt_trata_reporte">¿De qué trata mi reporte?</string>
    <string name="txt_aniadir_foto">Añadir foto</string>
    <string name="txt_sin_conexion">Sin conexión</string>
    <string name="txt_correo_contrasenia_invalida">¡Correo electrónico o contraseña invalida!</string>
    <string name="txt_correo_electronico_contrasenia">Correo electrónico y contraseña</string>
    <string name="txt_iniciando_sesion">Iniciando sesión...</string>
    <string name="txt_actualizando">Actualizando...</string>
    <string name="title_activity_maps">Map</string>
    <string name="txt_mi_ubicacion">Mi ubicación</string>
    <string name="txt_msg_pendiente">Pendiente</string>
    <string name="txt_guardando">Generando reporte</string>
    <string name="txt_msg_nuevo">Nuevo</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="folio">Folio:</string>
    <string name="estado">Estado:</string>
    <string name="fecha">Fecha:</string>
    <string name="hora">Hora:</string>
    <string name="direccion">Dirección:</string>
    <string name="comentario">Comentario:</string>

</resources>
