<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorDefault"
    tools:context="com.example.alexander.reportecalle.ProfileActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/ic_person"
            android:layout_gravity="center"/>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textColorHint="#FFF">

            <EditText
                android:id="@+id/edtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFF"
                android:hint="@string/txt_nombre"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textColorHint="#FFF">

            <EditText
                android:id="@+id/edtEmailProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFF"
                android:focusable="false"
                android:hint="@string/txt_mail"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textColorHint="#FFF"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/edtPasswordProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFF"
                android:hint="@string/txt_pass"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textColorHint="#FFF"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/edtPasswordProfileConfirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFF"
                android:hint="@string/txt_pass_confirmation"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSaveProfile"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ButtonSuccess"
            android:textStyle="bold"
            android:text="@string/txt_save"/>

        <Button
            android:id="@+id/btnCancelarProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ButtonDanger"
            android:textStyle="bold"
            android:text="@string/txt_cancelar"/>

    </LinearLayout>
</ScrollView>
