<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.alexander.reportecalle.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:orientation="vertical">

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:background="@drawable/cartelescalle"
            android:layout_gravity="center"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textColorHint="#FFF">

            <EditText
                android:id="@+id/edtMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:backgroundTint="#FFF"
                android:hint="@string/txt_mail"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textColorHint="#FFF">

            <EditText
                android:id="@+id/edtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:backgroundTint="#FFF"
                android:hint="@string/txt_pass"
                android:inputType="textPassword"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ButtonSuccess"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:text="@string/txt_iniciar_sesion" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="16dp"
            android:background="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/btnIniciarSesionFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ButtonPrimary"
            android:text="@string/txt_iniciar_sesion_facebook" />

        <TextView
            android:id="@+id/ttvRegistro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:text="@string/txt_registro" />

    </LinearLayout>
</ScrollView>
