<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorDefault"
    tools:context="com.example.alexander.reportecalle.GenerateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="180dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#FFF"
            android:textColorHint="#FFF">

            <EditText
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:scrollbars="vertical"
            android:hint="@string/txt_trata_reporte"
            android:ems="100"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/imgBtnReporte"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_add_a_photo"/>

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:id="@+id/area_btn"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancelarReporte"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_cancelar"
                android:theme="@style/ButtonDanger"/>

            <Button
                android:id="@+id/btnGuardarReportar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_save"
                android:theme="@style/ButtonSuccess"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
